Added java.env file parameters per Solr guide for garbage collection.